2010-07-19  Miguel de Icaza  <miguel@novell.com>

	* src/gmisc-win32.c (g_getenv): Distinguish between variable not
	found and an empty variable.  

	This should fix 566152

2010-07-19  Zoltan Varga  <vargaz@gmail.com>

	* src/glib.h (G_MAXUINT64): Define this. Fixes #623293.

	* src/eglib-config.hw: Define UINT64_MAX.

2010-07-16 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* src/gmisc-unix.c: include config.h. Fixes bug #609632.
	Use getpwuid_r instead of getpwent_r.

2010-07-02  Zoltan Varga  <vargaz@gmail.com>

	* src/glib.h: Define gboolean as int32_t to match mono_bool.

2010-06-22  Rodrigo Kumpera  <rkumpera@novell.com>

	* src/ghashtable.c: Add code to sanity check the
	hashtable contents. This is invaluable, for example,
	to catch bugs where a key hashcode changes after
	insertion.

2010-06-18  Chris Toshok  <toshok@ximian.com>

	patch from Jacob Berkman:

	* src/glib.h (g_mkdir): #define to mkdir
	(g_ascii_strtoull): #define to strtoull

	* src/gmodule.h: add G_BEGIN/END_DECLS

	* src/gstr.c (g_strdupv): new function.

2010-06-18  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* src/eglib-remap.h: Remap g_ptr_array_remove_fast too.

2010-06-15  Zoltan Varga  <vargaz@gmail.com>

	* src/gunicode.c: Applied patch from Hib Eris <hib@hiberis.nl>. use "windows.h"
	instead of "Windows.h".

2010-05-25  Zoltan Varga  <vargaz@gmail.com>

	* Applied patch from Burkhard Linke (blinke@cebitec.uni-bielefeld.de). Fix
	building on solaris.

2010-05-21  Zoltan Varga  <vargaz@gmail.com>

	* src/gmisc-win32.c (g_setenv): Use the
	GetEnvironmentVariableW/SetEnvironmentVariableW variants.

2010-05-15  Zoltan Varga  <vargaz@gmail.com>

	* src/glib.h (g_error): Add a for (;;) after the call to tell GCC this doesn't
	return, fixing some warnings.

2010-05-13  Alan McGovern  <amcgovern@novell.com>

	* src/gstring.c: Put in some null guards for the ctors

2010-05-11  Miguel de Icaza  <miguel@novell.com>

	* src/gunicode.c: Pull the Windows.h header when G_OS_WIN32 is
	defined. 
